Clean up browser notices

--- a/app/assets/stylesheets/core/notices.css.sass
+++ b/app/assets/stylesheets/core/notices.css.sass
@@ -100,3 +100,7 @@ body.old-browser .old-browser-notice
     bottom: 0
 body.transform3d .no3d-notice
   display: none
+
+@-moz-document url-prefix()
+  .no3d-notice .banner .text
+    line-height: 17px
