--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -35,19 +35,8 @@
       .center
         Загрузка…
         .ouroboros
+
     = yield
+
     .flash-messages
-    .old-browser-notice.diagonal-background
-      В более современном браузере сайт гораздо удобнее.
-      Установите, например,
-      <a href="http://www.google.com/chrome?hl=ru">Google Chrome</a>.
-    .no3d-notice
-      .banner
-        .text 3D
-        .line
-      .description.diagonal-background
-        В браузере с поддержкой 3D сайт будет красивее.
-        Можете, например, скачать
-        <a href="http://www.google.com/chrome?hl=ru">Google Chrome</a>.
-    .disabled-js
-      Если включить JavaScript, то сайт станет гораздо удобнее.
+    = render 'shared/notices'
