Show new comment form on open unimportant comments

--- a/app/assets/stylesheets/pages/comments.css.sass
+++ b/app/assets/stylesheets/pages/comments.css.sass
@@ -9,9 +9,10 @@
   .comments-controls
     height: 30px
     position: relative
+    margin-bottom: 28px
   .show-more-comments, .add-comment
     position: absolute
-    bottom: 0
+    top: 3px
     height: 30px
     line-height: 30px
     background: black
