--- a/app/assets/stylesheets/pages/new-comment.css.sass
+++ b/app/assets/stylesheets/pages/new-comment.css.sass
@@ -1,6 +1,6 @@
 .new-comment
   display: none
-  margin: 28px 110px 5px 60px
+  margin: 0 110px 5px 60px
   position: relative
   .shibboleth
     display: none
