Add comment answers by author/hero

--- a/app/assets/stylesheets/comments_moderation.css.sass
+++ b/app/assets/stylesheets/comments_moderation.css.sass
@@ -80,3 +80,15 @@ body
         &:hover, &:focus
           z-index: 2
           +box-shadow(white 0 0 0 3px, rgba(0, 0, 0, 0.4) 0 0 6px 3px)
+    .answer
+      textarea
+        border: none
+        resize: none
+        width: 100%
+        margin: 0 -7px
+        padding: 0 7px
+      .buttons
+        top: auto
+        bottom: -5px
+        margin-left: 23px
+        width: 33px
