Fix top menu content for non-3D browsers

--- a/app/assets/stylesheets/pages/top-menu.css.sass
+++ b/app/assets/stylesheets/pages/top-menu.css.sass
@@ -92,7 +92,6 @@ $top-menu: sprite-map("top-menu/*.png")
       float: left
   .slide-button
     position: relative
-    +perspective(2000px)
     .button
       display: block
       color: white
@@ -121,9 +120,8 @@ $top-menu: sprite-map("top-menu/*.png")
       padding: 10px 12px 4px 12px
       +box-shadow(rgba(0, 0, 0, 0.5) 0 0 7px)
       line-height: 1.25
-      margin-top: -15px
+      margin-top: -5px
       opacity: 0
-      +rotateX(60deg)
       +transition(all, 250ms)
       &, .rotated
         +box-shadow(rgba(0, 0, 0, 0.5) 0 0 7px)
@@ -150,7 +148,6 @@ $top-menu: sprite-map("top-menu/*.png")
       .content
         opacity: 1
         margin-top: 11px
-        +rotateX(0)
   .slide-button.what-is-it
     position: absolute
     top: 0
@@ -200,3 +197,12 @@ $top-menu: sprite-map("top-menu/*.png")
     position: relative
     top: -32px
     +transition(all, 600ms)
+  .slide-button
+    +perspective(2000px)
+    .content
+      margin-top: -15px
+      +rotateX(60deg)
+    &.open
+      .content
+        +rotateX(0)
+        margin-top: 11px
