Add meta description and keywords

--- a/app/views/posts/_top-menu.haml
+++ b/app/views/posts/_top-menu.haml
@@ -47,4 +47,5 @@
             Герой из фантастического мира пишет дневник
             прямо по ходу развития событий.
           %p
-            Вы можете написать комментарий герою или автору.
+            Вы можете написать комментарий герою или автору и повлиять на
+            развитие событий.
