--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,6 +18,9 @@
 
     %link( rel="alternate" type="application/atom+xml" href="/posts.atom" )
 
+    %meta( name='description' content='Иносним — книга в формате блога, герой из научно-фантастического мира пишет дневник прямо по ходу развития событий' )
+    %meta( name='keywords' content='Инсомнис, Insomnis, блог, книга, научная фантастика, бессонница' )
+
     - if Rails.env.production?
       :css
         #{Rails.root.join('public/assets/quick.css').read}
