Clean up new comment openning animation

--- a/app/assets/stylesheets/pages/post.css.sass
+++ b/app/assets/stylesheets/pages/post.css.sass
@@ -140,4 +140,4 @@ body.all-posts .post-page
   text-align: center
   font-style: italic
   text-shadow: white 0 1px 1px
-  margin: 30px 0
+  padding: 30px 0
