--- a/app/assets/stylesheets/comments_moderation.css.sass
+++ b/app/assets/stylesheets/comments_moderation.css.sass
@@ -29,9 +29,9 @@ body
     padding: 15px 0 10px 0
   h1
     font-size: 20px
-    margin-bottom: 15px
+    margin-bottom: 30px
     text-shadow: white 0 1px 1px
-    padding-left: 10px
+    padding-left: 15px
     a
       color: black
       text-decoration: none
@@ -88,7 +88,6 @@ body
         margin: 0 -7px
         padding: 0 7px
       .buttons
-        top: auto
-        bottom: -5px
+        top: 20px
         margin-left: 23px
         width: 33px
