Clean up black button style by common class

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -4,6 +4,7 @@
 @import 'core/common-images'
 @import 'core/notices'
 @import 'core/flash'
+@import 'core/controls'
 
 @import 'pages/title'
 @import 'pages/top-menu'
