--- a/app/views/posts/_comments.haml
+++ b/app/views/posts/_comments.haml
@@ -46,6 +46,6 @@
         %input.shibboleth( type="text" name="shibboleth" value="" )
 
       .submits
-        %input.hero( type="submit" value="Отправить герою" )
+        %input.hero.black-button( type="submit" value="Отправить герою" )
         .loader.ouroboros
-        %input.author( type="submit" name="for_author" value="Отправить автору" )
+        %input.author.black-button( type="submit" name="for_author" value="Отправить автору" )
