--- a/app/assets/stylesheets/comments_moderation.css.sass
+++ b/app/assets/stylesheets/comments_moderation.css.sass
@@ -1,6 +1,7 @@
 @import 'base'
 
 @import 'core/common'
+@import 'core/controls'
 
 body
   background: $gray-background
@@ -61,25 +62,15 @@ body
       input
         display: block
         float: left
-        border: none
-        background: black
-        color: white
         text-align: center
         width: 30px
         height: 30px
         font-size: 20px
-        cursor: pointer
-        +box-shadow(white 0 0 0, rgba(0, 0, 0, 0.4) 0 0 3px)
-        +transition(all, 200ms)
-        position: relative
         margin: 0 3px 3px 0
         &.delete
           font-size: 25px
         &.star
           font-size: 35px
-        &:hover, &:focus
-          z-index: 2
-          +box-shadow(white 0 0 0 3px, rgba(0, 0, 0, 0.4) 0 0 6px 3px)
     .answer
       textarea
         border: none
