Fix scroll position to change post title

--- a/app/assets/stylesheets/pages/new-comment.css.sass
+++ b/app/assets/stylesheets/pages/new-comment.css.sass
@@ -2,11 +2,12 @@
   display: none
   margin: 0 110px 5px 60px
   position: relative
+  padding-top: 28px
   .shibboleth
     display: none
   .mailbox
     position: absolute
-    top: -22px
+    top: 6px
     left: 0
     right: 0
     height: 30px
