--- a/app/assets/stylesheets/pages/post.css.sass
+++ b/app/assets/stylesheets/pages/post.css.sass
@@ -11,6 +11,9 @@
 
 body.all-posts .post-page
   min-height: 0
+  padding-top: 70px
+  &.first-post
+    padding-top: 40px
   &.last-post
     min-height: 100%
 
