--- a/app/views/shared/_notices.haml
+++ b/app/views/shared/_notices.haml
@@ -1,7 +1,8 @@
-.old-browser-notice.diagonal-background
-  В более современном браузере сайт будет гораздо удобнее.
-  Установите, например,
-  <a href="http://www.google.com/chrome?hl=ru">Google Chrome</a>.
+.old-browser-notice
+  .center.diagonal-background
+    В более современном браузере сайт будет гораздо удобнее.
+    Установите, например,
+    <a href="http://www.google.com/chrome?hl=ru">Google Chrome</a>.
 .no3d-notice
   .banner
     .text 3D
@@ -11,4 +12,5 @@
     Можете, например, скачать
     <a href="http://www.google.com/chrome?hl=ru">Google Chrome</a>.
 .disabled-js
-  Если включить JavaScript, то сайт станет гораздо удобнее.
+  .center.diagonal-background
+    Если включить JavaScript, то сайт станет гораздо удобнее.
