--- a/app/views/posts/_top-menu.haml
+++ b/app/views/posts/_top-menu.haml
@@ -27,6 +27,8 @@
           .content
             .arrow
               .rotated
+            .social-widget
+              = twitter_subscribe('insomnis_story')
         .slide-button.share
           %a.button( role="top-menu-open" href="#share" )
             .icon
@@ -34,6 +36,8 @@
           .content
             .arrow
               .rotated
+            .social-widget
+              = twitter_share('insomnis_story', root_url, 'Инсомнис — книга в виде блога')
       .slide-button.what-is-it
         %a.button( role="top-menu-open" href="#what-is-it" )
           .icon
