Add meta information to share link into social networks

--- a/app/assets/stylesheets/pages/top-menu.css.sass
+++ b/app/assets/stylesheets/pages/top-menu.css.sass
@@ -171,6 +171,7 @@ $top-menu: sprite-map("top-menu/*.png")
       left: auto
       right: 0
       font-size: 15px
+      width: 250px
       .arrow
         right: 41px
         left: auto
