--- a/app/views/posts/_top-menu.haml
+++ b/app/views/posts/_top-menu.haml
@@ -46,10 +46,9 @@
           .arrow
             .rotated
           %p
-            «Инсомнис» — книга в формате блога.
+            Инсомнис — книга в формате блога.
           %p
-            Герой из фантастического мира пишет дневник
-            прямо по ходу развития событий.
+            Герой из научно-фантастического мира пишет дневник прямо по ходу
+            развития событий
           %p
-            Вы можете написать комментарий герою или автору и повлиять на
-            развитие событий.
+            Он отвечает и прислушивается к вашим комментарии.
