--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,8 +18,7 @@
 
     %link( rel="alternate" type="application/atom+xml" href="/posts.atom" )
 
-    %meta( name='description' content='Инсомнис — книга в формате блога, герой из научно-фантастического мира пишет дневник прямо по ходу развития событий' )
-    %meta( name='keywords' content='Инсомнис, Insomnis, блог, книга, научная фантастика, бессонница' )
+    = render 'shared/meta'
 
     - if Rails.env.production?
       :css
