Add VK share to top menu

--- a/app/assets/stylesheets/pages/top-menu.css.sass
+++ b/app/assets/stylesheets/pages/top-menu.css.sass
@@ -184,6 +184,12 @@ $top-menu: sprite-map("top-menu/*.png")
       +sized-sprite($top-menu, share)
     .arrow
       left: 65px
+    .content
+      width: 160px
+    .vk
+      margin-bottom: 6px
+    .twitter
+      padding-left: 46px
 
 .top-menu.hidden
   top: -40px
