--- a/app/views/posts/_top-menu.haml
+++ b/app/views/posts/_top-menu.haml
@@ -36,7 +36,9 @@
           .content
             .arrow
               .rotated
-            .social-widget
+            .social-widget.vk
+              #vk_top_like
+            .social-widget.twitter
               = twitter_share('insomnis_story', root_url, 'Инсомнис — книга в виде блога')
       .slide-button.what-is-it
         %a.button( role="top-menu-open" href="#what-is-it" )
