Use hoverIndent to show author email

--- a/app/assets/stylesheets/pages/feedback.css.sass
+++ b/app/assets/stylesheets/pages/feedback.css.sass
@@ -8,7 +8,7 @@
   text-align: center
   +box-shadow(#ccc 0 0 0 0)
   +transition(all, 400ms)
-  &:hover
+  &.hover
     background: rgba(0, 0, 0, 1)
     bottom: 0
     +shadow
