--- a/app/assets/stylesheets/core/full-loader.css.sass
+++ b/app/assets/stylesheets/core/full-loader.css.sass
@@ -47,6 +47,6 @@ body.no-js .full-loader
 @each $vendor in $animation-vendors
   @#{$vendor}keyframes full-loader-ouroboros
     from
-      #{$vendor}transorm: rotate(0)
+      #{$vendor}transform: rotate(0)
     to
-      #{$vendor}transorm: rotate(360deg)
+      #{$vendor}transform: rotate(360deg)
