--- a/app/assets/stylesheets/pages/top-menu.css.sass
+++ b/app/assets/stylesheets/pages/top-menu.css.sass
@@ -117,7 +117,7 @@ $top-menu: sprite-map("top-menu/*.png")
       background: black
       color: white
       font-size: 15px
-      padding: 10px 12px 4px 12px
+      padding: 13px 15px 9px 15px
       +box-shadow(rgba(0, 0, 0, 0.5) 0 0 7px)
       line-height: 1.25
       margin-top: -5px
@@ -140,8 +140,6 @@ $top-menu: sprite-map("top-menu/*.png")
         top: 3px
       p
         padding-bottom: 6px
-      .social-widget
-        padding-bottom: 2px
       a
         color: white
     &.open
@@ -172,6 +170,7 @@ $top-menu: sprite-map("top-menu/*.png")
       right: 0
       font-size: 15px
       width: 250px
+      padding: 10px 12px 4px 12px
       .arrow
         right: 41px
         left: auto
@@ -179,6 +178,37 @@ $top-menu: sprite-map("top-menu/*.png")
     margin-right: 2px
     .icon
       +sized-sprite($top-menu, subscribe)
+    .vk-subscribe
+      position: relative
+      margin-bottom: 10px
+    .vk-crop
+      display: inline-block
+      position: relative
+      overflow: hidden
+      height: 19px
+      width: 80px
+      +border-radius(2px)
+      border: 1px solid
+      border-color: #789abf #5980a9 #5980a9 #5980a9
+    #vk_top_group
+      position: relative
+      top: -40px
+      left: -26px
+    .vk-group
+      display: inline-block
+      padding-left: 27px
+      position: relative
+      top: -6px
+      .vk-icon
+        top: 2px
+        left: 6px
+        position: absolute
+        +sized-sprite($top-menu, vk)
+      a
+        font-size: 14px
+        text-decoration: none
+        &:hover
+          text-decoration: underline
   .slide-button.share
     .icon
       +sized-sprite($top-menu, share)
@@ -187,7 +217,7 @@ $top-menu: sprite-map("top-menu/*.png")
     .content
       width: 160px
     .vk
-      margin-bottom: 6px
+      margin-bottom: 12px
     .twitter
       padding-left: 46px
 
