Fix group link in VK subscribe

--- a/app/views/posts/_top-menu.haml
+++ b/app/views/posts/_top-menu.haml
@@ -31,9 +31,9 @@
               .vk-subscribe
                 .vk-crop
                   #vk_top_group
-                .vk-group
+                %a.vk-group( href="http://vkontakte.ru/insomnis_story" )
                   .vk-icon
-                  %a( href="http://vkontakte.ru/insomnis_story" ) Инсомнис
+                  .vk-name Инсомнис
             .social-widget.twitter
               = twitter_subscribe('insomnis_story')
         .slide-button.share
