--- a/app/assets/stylesheets/pages/top-menu.css.sass
+++ b/app/assets/stylesheets/pages/top-menu.css.sass
@@ -182,7 +182,7 @@ $top-menu: sprite-map("top-menu/*.png")
       padding: 13px 15px 9px 15px
     .vk-subscribe
       position: relative
-      margin-bottom: 10px
+      margin-bottom: 8px
     .vk-crop
       display: inline-block
       position: relative
@@ -200,17 +200,18 @@ $top-menu: sprite-map("top-menu/*.png")
       display: inline-block
       padding-left: 27px
       position: relative
+      text-decoration: none
       top: -6px
       .vk-icon
-        top: 2px
+        top: 0
         left: 6px
         position: absolute
         +sized-sprite($top-menu, vk)
-      a
+      .vk-name
         font-size: 13px
-        text-decoration: none
-        &:hover
-          text-decoration: underline
+      &:hover .vk-name
+        text-decoration: underline
+        text-shadow: black 0 0 0
   .slide-button.share
     .icon
       +sized-sprite($top-menu, share)
