Change to be continue style and logic

--- a/app/views/posts/_top-menu.haml
+++ b/app/views/posts/_top-menu.haml
@@ -12,7 +12,7 @@
         %a.prev.to-page( title="Предыдущая запись" href="#{prevPage.try(:url)}" role="prev-page" ) ↑
         %a.prev.to-title( title="Обложка" href="#{root_path}" ) ↑
         %a.next.to-page( title="Следующая запись" href="#{nextPage.try(:url)}" role="next-page" ) ↓
-        %a.next.waiting( title="Продолжение следует" href="#subscribe" role="subscribe-on-last" ) ↓
+        %a.next.waiting( title="Продолжение следует" href="#" role="go-to-be-continue" ) ↓
 
       .post-title
         .top-title( role="prev-title-top title-slider" )
