--- a/app/assets/stylesheets/pages/post.css.sass
+++ b/app/assets/stylesheets/pages/post.css.sass
@@ -14,8 +14,6 @@ body.all-posts .post-page
   padding-top: 70px
   &.first-post
     padding-top: 40px
-  &.last-post
-    min-height: 100%
 
 .post-page .paper
   margin: 10px 0
@@ -122,8 +120,14 @@ body.all-posts .post-page
     .text
       position: relative
       z-index: 2
-.post-page .to-be-continue
+
+.to-be-continue
   text-align: center
   font-style: italic
   text-shadow: white 0 1px 1px
-  padding: 30px 0
+  min-height: 100%
+  background: $gray-background
+  &.hide
+    display: none
+  .text
+    padding-top: 110px
