--- a/app/assets/stylesheets/pages/top-menu.css.sass
+++ b/app/assets/stylesheets/pages/top-menu.css.sass
@@ -212,6 +212,19 @@ $top-menu: sprite-map("top-menu/*.png")
       &:hover .vk-name
         text-decoration: underline
         text-shadow: black 0 0 0
+    .twitter
+      margin-bottom: 5px
+    .rss
+      margin-bottom: 3px
+    .rss-link
+      padding-left: 20px
+      font-size: 14px
+      position: relative
+    .rss-icon
+      position: absolute
+      top: 1px
+      left: 0
+      +sized-sprite($top-menu, rss)
   .slide-button.share
     .icon
       +sized-sprite($top-menu, share)
