--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
     = airbrake_javascript_notifier
     = javascript_include_tag :application, type: nil
 
-    %link( rel="alternate" type="application/atom+xml" href="/posts.atom" )
+    %link( rel="alternate" type="application/atom+xml" href="#{ feed_path }" )
 
     = render 'shared/meta'
 
