--- a/app/views/shared/_meta.haml
+++ b/app/views/shared/_meta.haml
@@ -4,3 +4,4 @@
 %meta( name='og:title' content="Инсомнис — книга в формате блога" )
 %meta( name='og:description' content="Герой из научно-фантастического мира пишет дневник прямо по ходу развития событий, прислушиваясь и отвечая на ваши комментарии." )
 %meta( name='og:image' content="#{ root_url + 'logo.png' }" )
+%meta( name='og:url' content="#{ root_url }" )
