--- a/app/assets/stylesheets/pages/top-menu.css.sass
+++ b/app/assets/stylesheets/pages/top-menu.css.sass
@@ -179,51 +179,32 @@ $top-menu: sprite-map("top-menu/*.png")
       +sized-sprite($top-menu, subscribe)
     .content
       width: 180px
-      padding: 13px 15px 9px 15px
+      padding: 11px 15px 9px 15px
     .vk-subscribe
       position: relative
-      margin-bottom: 8px
-    .vk-crop
-      display: inline-block
-      position: relative
-      overflow: hidden
-      height: 19px
-      width: 80px
-      +border-radius(2px)
-      border: 1px solid
-      border-color: #789abf #5980a9 #5980a9 #5980a9
-    #vk_top_group
-      position: relative
-      top: -41px
-      left: -26px
+      margin: 0 0 11px 0
     .vk-group
       display: inline-block
-      padding-left: 27px
+      padding-left: 22px
       position: relative
-      text-decoration: none
-      top: -6px
+      font-size: 14px
       .vk-icon
-        top: 0
-        left: 6px
+        top: 1px
+        left: 1px
         position: absolute
         +sized-sprite($top-menu, vk)
-      .vk-name
-        font-size: 13px
-      &:hover .vk-name
-        text-decoration: underline
-        text-shadow: black 0 0 0
     .twitter
       margin-bottom: 5px
     .rss
-      margin-bottom: 3px
+      margin-bottom: 4px
     .rss-link
-      padding-left: 20px
+      padding-left: 22px
       font-size: 14px
       position: relative
     .rss-icon
       position: absolute
       top: 1px
-      left: 0
+      left: 1px
       +sized-sprite($top-menu, rss)
   .slide-button.share
     .icon
