--- a/app/assets/stylesheets/pages/top-menu.css.sass
+++ b/app/assets/stylesheets/pages/top-menu.css.sass
@@ -179,32 +179,34 @@ $top-menu: sprite-map("top-menu/*.png")
       +sized-sprite($top-menu, subscribe)
     .content
       width: 180px
-      padding: 11px 15px 9px 15px
+      padding: 15px 15px 9px 15px
     .vk-subscribe
       position: relative
-      margin: 0 0 11px 0
-    .vk-group
+      margin-bottom: 8px
+    .vk-crop
       display: inline-block
-      padding-left: 22px
       position: relative
-      font-size: 14px
-      .vk-icon
-        top: 1px
-        left: 1px
-        position: absolute
-        +sized-sprite($top-menu, vk)
+      overflow: hidden
+      height: 20px
+      width: 172px
+      border: 1px solid #adbccb
+      +border-radius(2px)
+    #vk_top_group
+      position: relative
+      top: -94px
+      left: -5px
     .twitter
       margin-bottom: 5px
     .rss
       margin-bottom: 4px
     .rss-link
-      padding-left: 22px
+      padding-left: 20px
       font-size: 14px
       position: relative
     .rss-icon
       position: absolute
       top: 1px
-      left: 1px
+      left: 0
       +sized-sprite($top-menu, rss)
   .slide-button.share
     .icon
