--- a/app/views/posts/title.html.haml
+++ b/app/views/posts/title.html.haml
@@ -1,6 +1,6 @@
 - unless @all_posts
   - @hide_top_menu = true
-  = render 'top-menu'
+  = render 'top_menu'
 
 %article.title-page.page( data-url="/" )
   .book
