--- a/app/assets/stylesheets/pages/post.css.sass
+++ b/app/assets/stylesheets/pages/post.css.sass
@@ -9,7 +9,7 @@
     width: 760px
     margin: 0 auto
 
-body.all-posts .post-page
+body.full .post-page
   min-height: 0
   padding-top: 70px
   &.first-post
