--- a/app/views/posts/_to_be_continue.haml
+++ b/app/views/posts/_to_be_continue.haml
@@ -1,4 +1,5 @@
-.to-be-continue{ class_if('hide', (@title or @post.next or @post.draft?)) }
+- hidden = @title or @post.next or @post.draft?
+%article.page.to-be-continue{ class_if('hide', hidden) }
   .text Продолжение следует
   .subscribe-and-share
 
