Add redirect from story dir to first post

--- a/app/views/comments/index.html.haml
+++ b/app/views/comments/index.html.haml
@@ -1,5 +1,5 @@
 - content_for :head do
-  %title Модерация комментариев — #{story['title']}
+  %title Модерация комментариев — #{book_title}
   = include_fonts
   = stylesheet_link_tag    :comments_moderation
   = include_jquery
