--- a/app/views/posts/feed.atom.haml
+++ b/app/views/posts/feed.atom.haml
@@ -2,7 +2,7 @@
 - root = root_url.sub(/\/$/, '')
 - id_prefix = "tag:#{request.host},2011:"
 %feed( xmlns="http://www.w3.org/2005/Atom" xml:lang="ru" )
-  %title= story['title']
+  %title= book_title
   %link( rel="self" href="#{root}/posts.atom" type="application/atom+xml" )/
   %link( href="#{root}/" type="text/html" )/
   %updated= @entries.last.updated_at.xmlschema
