--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
     %meta( charset='UTF-8' )
     %title
       - title = yield(:title)
-      = title.present? ? title + ' — ' +story['title'] : story['title']
+      = title.present? ? title + ' — ' + book_title : book_title
 
     = favicon_link_tag
     = enable_html5_for_ie
