Remove hash URLs from top menu popup links

--- a/app/views/posts/_top_menu.haml
+++ b/app/views/posts/_top_menu.haml
@@ -21,7 +21,7 @@
       .subscribe-and-share
 
         .slide-button.subscribe
-          %a.button( role="top-menu-open" href="#subscribe" )
+          %a.button( role="top-menu-open" href="#" )
             .icon
             Подпишись
           .content
@@ -34,7 +34,7 @@
               = twitter_subscribe('insomnis_story')
 
         .slide-button.share
-          %a.button( role="top-menu-open" href="#share" )
+          %a.button( role="top-menu-open" href="#" )
             .icon
             Расскажи друзьям
           .content
@@ -45,7 +45,7 @@
             .twitter-share
               = twitter_share('insomnis_story', root_url, 'Инсомнис — книга в виде блога')
       .slide-button.what-is-it
-        %a.button( role="top-menu-open" href="#what-is-it" )
+        %a.button( role="top-menu-open" href="#" )
           .icon
           Что это такое?
         .content
